# qmoms

./: .gitignore  LICENSE.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py.bak
data/: surface.csv  zerocd.csv
qmoms/: __init__.py  qmoms.py  qmoms_params.py  qmoms_utils.py
qmoms/examples/: __init__.py  qmoms_test.py
