[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qmoms"
version = "0.1"
description = "Option-implied moments from implied volatility surface data"
authors = [{ name = "Grigory Vilkov", email = "vilkov@vilkov.net" }]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["implied variance", "variance swap", "VIX", "MFIV", "CVIX", "skewness"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"

[tool.setuptools]
packages = "find:"
include-package-data = true
package-dir = { "" = "." }
package-data = { "qmoms" = ["data/*.csv"] }

[project.urls]
Homepage = "https://github.com/vilkovgr/qmoms"

[project.dependencies]
numpy = ">=1.19"
pandas = ">=2.0"
scipy = ">=1.10"
tqdm = ">=4.0"
